data/derived/comb/progs/unify/prog3781.ml.out
Characters 93-94:
  |(b,c) -> b @ [0] , bigAdd ((bigMul x l2) @ b) a in 
                                                 ^
Error: This expression has type int list * 'a
       but an expression was expected of type int list
